--- a/workspace.css
+++ b/workspace.css
@@ -71,3 +71,23 @@
     padding: 4px 10px 10px 10px;
     background-color: rgba(255, 255, 255, 0.5);
 }
+
+
+
+
+#widget-gcode-instance .panel-heading,
+#com-chilipeppr-3dviewer-controlpanel .panel-heading 
+{
+    background:none;
+    /* border:none; */
+    padding:10px 15px;
+    margin-bottom:0;
+}
+
+#com-chilipeppr-3dviewer-controlpanel 
+{
+    padding:0 10px;
+    float:left;
+}
+
+
